Fixed the edit button save action

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ logging.level.org.flywaydb=DEBUG
 
 # Server
 server.port=8080
+
+# Enable HTTP method override
+spring.mvc.hiddenmethod.filter.enabled=true
